--- a/index.html
+++ b/index.html
@@ -286,9 +286,7 @@
               Project Terbaru
             </h2>
             <p class="font-medium text-md text-secondary md:text-lg">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia
-              voluptatem alias natus itaque ipsum rem, consectetur iste
-              blanditiis magni atque.
+              Pekerjaan yang saya buat dalam waktu dekat ini
             </p>
           </div>
         </div>
@@ -304,19 +302,17 @@
               Web Crowfunding (Golang)
             </h3>
             <p class="font-medium text-base text-secondary">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla
-              pariatur unde expedita corporis, beatae commodi?
+              Membuat API CROWNFUNDING dengan menggunakan GIN,JWT,MYSQL
             </p>
           </div>
 
           <div class="mb-12 p-4 md:w-1/2">
             <div class="rounded-md shadow-md overflow-hidden">
-              <img src="/dist/portfolio/pt1.png"" width="w-full" alt="" />
+              <img src="/dist/portfolio/pt-2.png" width="w-full" alt="" />
             </div>
             <h3 class="font-semibold text-xl text-dark mt-5">QUARKUS (JAVA)</h3>
             <p class="font-medium text-base text-secondary">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla
-              pariatur unde expedita corporis, beatae commodi?
+              Membuat Aplikasi CRUD sederhana dengan menggunakan Quarkus(JAVA)
             </p>
           </div>
 
@@ -325,11 +321,10 @@
               <img src="/dist/portfolio/pt1.png"" width="w-full" alt="" />
             </div>
             <h3 class="font-semibold text-xl text-dark mt-5">
-              NODE JS (EXPRESS)
+              NODE JS (EXPRESS) CRUD
             </h3>
             <p class="font-medium text-base text-secondary">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla
-              pariatur unde expedita corporis, beatae commodi?
+              Membuat aplikasi CRUD menggunakan nodejs express dan Mysql
             </p>
           </div>
 
@@ -339,8 +334,7 @@
             </div>
             <h3 class="font-semibold text-xl text-dark mt-5">VUE JS (BLOG)</h3>
             <p class="font-medium text-base text-secondary">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla
-              pariatur unde expedita corporis, beatae commodi?
+              Membuat Website blog dengan VueJS
             </p>
           </div>
         </div>
