--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
           <div class="w-full self-end px-4 lg:w-1/2">
             <div class="relative mt-10 lg:mt-9 lg:right-0">
               <img
-                src="/dist/images/berhasil.png"
+                src="https://i.postimg.cc/W1FrNqKM/avatar.png"
                 alt="ilham maulana"
                 class="max-w-full mx-auto"
               />
@@ -308,7 +308,11 @@
 
           <div class="mb-12 p-4 md:w-1/2">
             <div class="rounded-md shadow-md overflow-hidden">
-              <img src="/dist/portfolio/pt-2.png" width="w-full" alt="" />
+              <img
+                src="https://i.postimg.cc/ZRpz4HP1/pt-2.png"
+                width="w-full"
+                alt=""
+              />
             </div>
             <h3 class="font-semibold text-xl text-dark mt-5">QUARKUS (JAVA)</h3>
             <p class="font-medium text-base text-secondary">
@@ -318,7 +322,11 @@
 
           <div class="mb-12 p-4 md:w-1/2">
             <div class="rounded-md shadow-md overflow-hidden">
-              <img src="/dist/portfolio/pt1.png"" width="w-full" alt="" />
+              <img
+                src="https://i.postimg.cc/W4QcBCZG/pt1.png"
+                width="w-full"
+                alt=""
+              />
             </div>
             <h3 class="font-semibold text-xl text-dark mt-5">
               NODE JS (EXPRESS) CRUD
@@ -432,7 +440,7 @@
           <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
             <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10">
               <img
-                src="/dist/sertifikat/sertifikat-1.png"
+                src="https://i.postimg.cc/W4pdDDYW/aa.png"
                 alt="sertifikasi-1"
                 class="w-full"
               />
@@ -461,7 +469,7 @@
           <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
             <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10">
               <img
-                src="/dist/sertifikat/sertifikat-2.png"
+                src="https://i.postimg.cc/C1zdN3gb/yy.png"
                 alt="sertifikasi-1"
                 class="w-full"
               />
@@ -489,7 +497,7 @@
           <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
             <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10">
               <img
-                src="/dist/sertifikat/sertifikat-3.png"
+                src="https://i.postimg.cc/R0PNwMjM/zz.png"
                 alt="sertifikasi-1"
                 class="w-full"
               />
