--- a/index.html
+++ b/index.html
@@ -296,7 +296,11 @@
         >
           <div class="mb-12 p-4 md:w-1/2">
             <div class="rounded-md shadow-md overflow-hidden">
-              <img src="/dist/portfolio/pt1.png" width="w-full" alt="" />
+              <img
+                src="https://i.postimg.cc/W4QcBCZG/pt1.png"
+                width="w-full"
+                alt=""
+              />
             </div>
             <h3 class="font-semibold text-xl text-dark mt-5">
               Web Crowfunding (Golang)
@@ -338,7 +342,11 @@
 
           <div class="mb-12 p-4 md:w-1/2">
             <div class="rounded-md shadow-md overflow-hidden">
-              <img src="/dist/portfolio/pt1.png"" width="w-full" alt="" />
+              <img
+                src="https://i.postimg.cc/W4QcBCZG/pt1.png"
+                width="w-full"
+                alt=""
+              />
             </div>
             <h3 class="font-semibold text-xl text-dark mt-5">VUE JS (BLOG)</h3>
             <p class="font-medium text-base text-secondary">
