--- a/index.html
+++ b/index.html
@@ -109,15 +109,20 @@
               Selamat datang di web Portofolio saya. Ayo berkanalan dengan saya!
             </p>
             <a
-              href="#"
+              href="mailto:ims.ilham@gmail.com"
               class="text-base font-semibold text-white bg-primary py-3 px-8 rounded-full hover:shadow-lg hover:opacity-80 transition duration-300 ease-in-out"
               >Hubungi saya</a
+            >
+            <a
+              href="https://drive.google.com/file/d/1OseODwNYt0d7y2PVr-Yl5u0cBm4-srs6/view?usp=sharing"
+              class="text-base font-semibold text-white bg-primary py-3 px-8 rounded-full hover:shadow-lg hover:opacity-80 transition duration-300 ease-in-out"
+              >Download CV</a
             >
           </div>
           <div class="w-full self-end px-4 lg:w-1/2">
             <div class="relative mt-10 lg:mt-9 lg:right-0">
               <img
-                src="https://i.postimg.cc/W1FrNqKM/avatar.png"
+                src="https://ucarecdn.com/1a1fe657-c519-4350-ad8a-5da772f904fc/avatar.png"
                 alt="ilham maulana"
                 class="max-w-full mx-auto"
               />
@@ -448,7 +453,7 @@
           <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
             <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10">
               <img
-                src="https://i.postimg.cc/W4pdDDYW/aa.png"
+                src="https://ucarecdn.com/258b0b3f-ce9d-4a86-9790-15ca8ad8eea8/aa.png"
                 alt="sertifikasi-1"
                 class="w-full"
               />
@@ -477,7 +482,7 @@
           <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
             <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10">
               <img
-                src="https://i.postimg.cc/C1zdN3gb/yy.png"
+                src="https://ucarecdn.com/cb92ed18-be0d-4ff0-8cb4-51c36887b1b1/zz.png"
                 alt="sertifikasi-1"
                 class="w-full"
               />
@@ -505,7 +510,7 @@
           <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
             <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10">
               <img
-                src="https://i.postimg.cc/R0PNwMjM/zz.png"
+                src="https://ucarecdn.com/d29cb693-0ae3-4acc-9b49-b638f188de22/yy.png"
                 alt="sertifikasi-1"
                 class="w-full"
               />
